# diamond-types

./: .gitignore  BINARY.md  Cargo.toml  INTERNALS.md  README.md  automerge-trace.json  bench-old.sh  bench-runonold.sh  bench.sh  bucket_counts.js  build-swift.sh  build_wasm.sh  profile.sh
benches/: automerge.rs  baseline_data.rs  benchmark.rs  core.rs  local_edits.rs  random_edits.rs  remote_edits.rs  ropey.rs  utils.rs  yjs.rs
benchmark_data/: A1.dt  A2.dt  C1.dt  C2.dt  S1.dt  S2.dt  automerge-paper.dt  clownschool.dt  egwalker.dt  egwalker_old.dt  friendsforever.dt  git-makefile.dt  seph-blog1.dt
crates/bench/: Cargo.toml
crates/bench/src/: idxtrace.rs  main.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: export.rs  git.rs  main.rs
crates/content-tree/: Cargo.toml  README.md
crates/content-tree/examples/: bitrun.rs  custom_entry.rs
crates/content-tree/src/: debug.rs  index.rs  internal.rs  iter.rs  leaf.rs  lib.rs  metrics.rs  mutations.rs  root.rs  safe_cursor.rs  testrange.rs  unsafe_cursor.rs
crates/content-tree/tests/: fuzzer.rs
crates/diamond-types/: Cargo.toml
crates/diamond-types-old/: Cargo.toml  README.md
crates/diamond-types-old/benches/: core.rs  ropey.rs  utils.rs
crates/diamond-types-old/examples/: cloning_replay.rs  simple.rs  stats.rs
crates/diamond-types-old/src/: crdtspan.rs  lib.rs  order.rs  unicount.rs
crates/diamond-types-old/src/list/: check.rs  doc.rs  double_delete.rs  eq.rs  external_txn.rs  markers.rs  merge_positional.rs  mod.rs  positional.rs  positional_fuzzer.rs  span.rs  txn.rs
crates/diamond-types-old/src/list/encoding/: mod.rs  patch_encoding.rs
crates/diamond-types-old/src/list/ot/: positionmap.rs  traversal.rs
crates/diamond-types-old/src/list/time/: docpatchiter.rs  external_patches.rs  history.rs  patchiter.rs  positionmap.rs  txn_trace.rs
crates/diamond-types-old/tests/: fugue_or_yjsmod.rs  fuzzer.rs  realworld.rs  realworld_positional.rs
crates/diamond-types-positional/: Cargo.toml  README.md
crates/diamond-types-positional/benches/: core.rs  utils.rs
crates/diamond-types-positional/examples/: posstats.rs  print.rs  stats.rs
crates/diamond-types-positional/src/: alloc.rs  lib.rs  localtime.rs  rev_span.rs  unicount.rs
crates/diamond-types-positional/src/list/: branch.rs  check.rs  checkout.rs  eq.rs  frontier.rs  history.rs  history_tools.rs  internal_op.rs  list.rs  merge.rs  mod.rs  op_iter.rs  operation.rs  oplog.rs  opset.rs  remote_ids.rs  timedag.rs
crates/diamond-types-positional/src/list/encoding/: README.md  decode_oplog.rs  encode_oplog.rs  mod.rs  varint.rs
crates/diamond-types-positional/src/list/m1/: merge.rs  mod.rs  yjsspan.rs
crates/diamond-types-positional/src/list/m2/: advance_retreat.rs  delete.rs  deletes.rs  dot.rs  fuzzer.rs  markers.rs  merge.rs  merge_positional.rs  metrics.rs  mod.rs  positionmap.rs  rev_span.rs  txn_trace.rs  yjsspan2.rs
crates/diamond-types-positional/src/rle/: mod.rs  simple_rle.rs
crates/diamond-types/benches/: core.rs  utils.rs
crates/diamond-types/examples/: posstats.rs  print.rs  stats.rs
crates/diamond-types/src/: alloc.rs  common.rs  crdtspan.rs  dtrange.rs  entry.rs  lib.rs  localtime.rs  merge_iter.rs  order.rs  rangeextra.rs  remotespan.rs  rev_range.rs  rev_span.rs  unicount.rs
crates/diamond-types/src/content_tree/: cursor.rs  fuzzer.rs  index.rs  internal.rs  leaf.rs  mod.rs  mutations.rs  root.rs  safe_cursor.rs  unsafe_cursor.rs
crates/diamond-types/src/list/: branch.rs  check.rs  doc.rs  double_delete.rs  eq.rs  external_txn.rs  frontier.rs  fuzzer_tools.rs  history.rs  history_tools.rs  internal_op.rs  list.rs  markers.rs  merge_positional.rs  mod.rs  op_iter.rs  operation.rs  oplog.rs  oplog_merge.rs  oplog_merge_fuzzer.rs  positional.rs  positional_fuzzer.rs  remote_ids.rs  serde.rs  span.rs  time.rs  txn.rs
crates/diamond-types/src/list/encoding/: decode_oplog.rs  encode_oplog.rs  fuzzer.rs  mod.rs  patch_encoding.rs  tests.rs  txn_trace.rs  varint.rs
crates/diamond-types/src/list/m1/: mod.rs
crates/diamond-types/src/list/m2/: advance_retreat.rs  dot.rs
crates/diamond-types/src/list/merge/: README.md  advance_retreat.rs  dot.rs  fuzzer.rs  markers.rs  merge.rs  metrics.rs  mod.rs  txn_trace.rs  yjsspan.rs
crates/diamond-types/src/list/ot/: mod.rs  ot.rs  positional.rs  positionmap.rs  traversal.rs
crates/diamond-types/src/list/time/: docpatchiter.rs  external_patches.rs  history.rs  mod.rs  patchiter.rs  positionmap.rs  txn_trace.rs
crates/diamond-types/src/range_tree/: README.md  cursor.rs  entry.rs  fuzzer.rs  index.rs  mod.rs  mutations.rs  root.rs
crates/diamond-types/src/rle/: mod.rs  rle_vec.rs  simple_rle.rs
crates/diamond-types/tests/: fuzzer.rs  realworld.rs
crates/diamond-wasm/: Cargo.toml  README.md  example.js  example.mjs  foo.mjs
crates/diamond-wasm/src/: lib.rs
crates/dt-cli/: Cargo.toml
crates/dt-cli/src/: dot.rs  export.rs  git.rs  main.rs
crates/dt-swift/: Cargo.toml  build.rs
crates/dt-swift/src/: lib.rs
crates/git-reader/: Cargo.toml
crates/git-reader/src/: main.rs
crates/rle/: Cargo.toml  README.md
crates/rle/src/: append.rs  append_rle.rs  intersect.rs  iter_ctx.rs  lib.rs  merge_iter.rs  rlerun.rs  splitable_span.rs  subtract.rs  take_max_iter.rs  zip.rs
crates/run_on_old/: Cargo.toml
crates/run_on_old/examples/: paper_memusage.rs
crates/run_on_old/src/: conformance_test.rs  main.rs
crates/trace-alloc/: Cargo.toml
crates/trace-alloc/src/: lib.rs
examples/: paper_stats.rs  posstats.rs  print.rs  profile.rs  simple.rs  stats.rs
js/: .mocharc.json  example.js  package.json  tsconfig.json
npm-pkg-isomorphic/: README.md  index.js  package.json
prev_oplog/: hack.rs  path.rs  simpledb.rs
src/: alloc.rs  branch.rs  btree.rs  check.rs  common.rs  dtrange.rs  frontier.rs  fuzzer.rs  hack.rs  history.rs  history_tools.rs  lib.rs  list_fuzzer_tools.rs  merge_iter.rs  new_oplog.rs  operation.rs  oplog.rs  order.rs  path.rs  remotespan.rs  rev_range.rs  serde.rs  serde_helpers.rs  simple_checkout.rs  simpledb.rs  splitable_span.rs  stats.rs  (+4 more)
(+353 files in other folders)
