[workspace]
members = ["crates/*"]

[profile.release]
#debug = true
lto = true
#opt-level = "s"
codegen-units = 1
#panic = "abort"

[profile.release.package.diamond-wasm]
opt-level = 2
#opt-level = "s"
#debugging = true

[profile.release.package.diamond-cli]
opt-level = "z"
#lto = false
#strip = true