[package]
name = "diamond-types"
version = "1.0.0"
edition = "2021"
exclude = [
    ".idea", ".vscode",
    "vis", "wiki", "js",
    "benchmark_data", "test_data",
    ".github"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
smartstring = "1.0.0"
str_indices = "0.3.1"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
lazy_static = "1.4.0"
serde_crate = { package = "serde", version = "1.0.136", features = ["derive"], optional = true }
rle = { version = "0.2.0", path = "crates/rle" }
content-tree = { version = "0.2.0", path = "crates/content-tree" }

#jumprope = { path = "../../../jumprope-rs" }

# Its tempting to disable default-features in jumprope because it means we don't need to hook in crypto random, which
# saves some size in the wasm output size. But I think its better to default to having this feature enabled.
#jumprope = { version = "0.5.3", default-features = false }
jumprope = "1.0.0"
humansize = "1.1.1"
num_enum = "0.5.6"

# crc32c might be faster, but it adds 10kb to the wasm bundle size. crc only adds 1kb.
#crc32c = "0.6"
crc = "2.1.0"
lz4_flex = { version = "0.9.2", optional = true }

[dev-dependencies]
criterion = "0.3.5"
rand = { version = "0.8.5", features = ["small_rng"] }
crdt-testdata = { path = "crates/crdt-testdata" }
trace-alloc = { path = "crates/trace-alloc" }

# For OT fuzz data tests
#json_minimal = "0.1.3"

[features]
default = ["lz4"]
#memusage = ["trace-alloc/memusage"]
inlinerope = []
lz4 = ["lz4_flex"]
serde = ["serde_crate", "smallvec/serde", "smartstring/serde"]
dot_export = []
wchar_conversion = ["jumprope/wchar_conversion"]

[lib]
bench = false

[[bench]]
name = "core"
harness = false


[profile.release]
#debug = true
lto = true
#opt-level = "s"
codegen-units = 1
#panic = "abort"

[profile.release.package.diamond-wasm]
opt-level = 2
#opt-level = "s"
#debugging = true

[profile.release.package.diamond-cli]
opt-level = "z"
#lto = false
#strip = true