[package]
name = "content-tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rle = { path = "../rle" }
# Only used for printing stats. TODO: Move me to dev-dependencies!
humansize = "1.1"
smallvec = { version = "1.6", features = ["union"] }

[dev-dependencies]
rand = { version = "^0.8", features = ["small_rng"] }
