[package]
name = "content-tree"
version = "0.2.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2021"
license = "ISC OR Apache-2.0"
description = "An efficient data structure for compacted RLE data"
repository = "https://github.com/josephg/diamond-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rle = { version = "0.2.0", path = "../rle", features = ["smallvec"] }
# Only used for printing stats. TODO: Move me to dev-dependencies!
humansize = "1.1.1"
smallvec = { version = "1.8.0", features = ["union"] }

[dev-dependencies]
rand = { version = "^0.8", features = ["small_rng"] }
