[package]
name = "diamond-types-old"
version = "0.1.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2021"
license = "ISC OR Apache-2.0"
description = "Small and fast CRDT data types for collaborative editing"
repository = "https://github.com/josephg/diamond-types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diamond-core-old = { path = "../diamond-core-old" }
smartstring = "1.0.1"
#ropey = "1"
str_indices = "0.4.0"
smallvec = { version = "1", features = ["union"] }
lazy_static = "1.4"
#serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }
rle = { version = "0.2", path = "../rle" }
content-tree = { version = "0.2", path = "../content-tree" }
bitvec = "1.0.1"
jumprope = { version = "1.1.1" }

# Only used for printing stats. TODO: Move me to dev-dependencies!
humansize = "1.1"
num_enum = "0.5"

[dev-dependencies]
criterion = "^0.3"
rand = { version = "^0.8", features = ["small_rng"] }
crdt-testdata = { path = "../crdt-testdata" }

# For OT fuzz data tests
json_minimal = "0.1.3"

[features]
memusage = []
inlinerope = []
serde = ["dep:serde", "smallvec/serde", "smartstring/serde"]

[lib]
bench = false

#[[bench]]
#name = "ropey"
#harness = false

[[bench]]
name = "core"
harness = false


[[example]]
name = "cloning_replay"
required-features = ["serde", "serde_json"]