[package]
name = "diamond-types"
version = "0.1.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2018"
license = "ISC OR Apache-2.0"
description = "Small and fast CRDT data types for collaborative editing"
repository = "https://github.com/josephg/diamond-types"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diamond-core = { path = "../diamond-core" }
smartstring = "0.2"
ropey = "1.1"
smallvec = { version = "1.6", features = ["union"] }
lazy_static = "1.4"
serde_crate = { package = "serde", version = "1.0.126", features = ["derive"], optional = true }
rle = { version = "0.1", path = "../rle" }
content-tree = { version = "0.1", path = "../content-tree" }
bitvec = "0.22.3"

# Only used for printing stats. TODO: Move me to dev-dependencies!
humansize = "1.1"
num_enum = "0.5"

[dev-dependencies]
criterion = "^0.3"
rand = { version = "^0.8", features = ["small_rng"] }
crdt-testdata = { path = "../testdata" }

# For OT fuzz data tests
json_minimal = "0.1.3"

[features]
memusage = []
inlinerope = []
serde = ["serde_crate", "smallvec/serde", "smartstring/serde"]

[lib]
bench = false

[[bench]]
name = "ropey"
harness = false

[[bench]]
name = "core"
harness = false
