[package]
name = "diamond-wasm"
version = "0.1.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2018"
license = "ISC OR Apache-2.0"
description = "Javascript wrapper for diamond-types"
repository = "https://github.com/josephg/diamond-types"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.3"
smallvec = { version = "1.6.1", features = ["union"] }
serde = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
#wee_alloc = { version = "0.4.5", optional = true }

#diamond-types = { version = "0.1.0", features = ["serde"] }
diamond-core = { path = "../diamond-core" }
diamond-types = { path = "../diamond-types", features = ["serde"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"
