[package]
name = "git-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "*"
diamond-types = { path = "../diamond-types" }
#diamond-types = { path = "../diamond-types", features = ["dot_export"] }
similar = "2"
smallvec = "1"

#[features]
#dot_export = []
