[package]
name = "git-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.25"
diamond-types = { path = "../.." }
#diamond-types = { path = "../..", features = ["dot_export"] }
similar = "2.1.0"
smallvec = "1.8.0"

#[features]
#dot_export = []
