[package]
name = "git-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17.1"
diamond-types = { path = "../.." }
#diamond-types = { path = "../..", features = ["dot_export"] }
similar = "2.1.0"
smallvec = "1.8.0"
indicatif = "0.17.3"
argh = "0.1.10"
anyhow = "1.0.71"

#[features]
#dot_export = []
