[package]
name = "rle"
version = "0.1.1"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2018"
license = "ISC OR Apache-2.0"
description = "Simple utilities for run-length encoded data"
repository = "https://github.com/josephg/diamond-types"

[dependencies]
smallvec = { version = "1.6", optional = true }
