[package]
name = "rle"
version = "0.2.0"
authors = ["Seph Gentle <me@josephg.com>"]
edition = "2021"
license = "ISC OR Apache-2.0"
description = "Simple utilities for run-length encoded data"
repository = "https://github.com/josephg/diamond-types"

[dependencies]
smallvec = { version = "2.0.0-alpha.6", optional = true }
