[package]
name = "run_on_old"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diamond-types = {path = "../..", features = ["ops_to_old"]}
diamond-types-old = {path = "../diamond-types-old"}
smallvec = "1.9.0"
rle = {path = "../rle"}
criterion = { version = "0.5.1", features = ["html_reports"] }

[dev-dependencies]
# This is all for the conformance tests.
diamond-types = { path = "../..", features = ["serde"] }
serde = "1.0.136"
serde_json = "1.0.79"
smartstring = "1.0.1"
brotli-decompressor = "2.5.0"
