[package]
name = "run_on_old"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diamond-types = {path = "../..", features = ["ops_to_old"]}
diamond-types-crdt = {path = "../diamond-types-crdt"}
smallvec = "2.0.0-alpha.6"
rle = {path = "../rle", features = ["smallvec"]}
criterion = { version = "0.5.1", features = ["html_reports"] }
trace-alloc = { path = "../trace-alloc", optional = true }
serde = { version = "1.0.136", optional = true }
serde_json = { version = "1.0.79", optional = true }

[dev-dependencies]
# This is all for the conformance tests.
diamond-types = { path = "../..", features = ["serde"] }
smartstring = "1.0.1"
brotli-decompressor = "2.5.0"

[features]
memusage = ["trace-alloc", "trace-alloc/memusage", "dep:serde", "dep:serde_json"]
bench = []
