[package]
name = "trace-alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#serde = { version = "1.0.198", optional = true, features = ["serde_derive"] }

[features]
memusage = []
#serde = ["dep:serde"]